lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
def step(){
	var y=0;
	y=getY();
while(y>0)[{
	if(getVitesseY()>10){
		setPousseeDesiree(getPoussee()+1)
	}
}
}
